@startuml Entities

'Tables

'Utilisateurs

entity User {
    *id : int
    *fullName: varchar
    *email : varchar
    *password: varchar
    *created_at : datetime
    *role : varchar
}

'Equipes

entity Team {
    *id: int
    *name: varchar
}

'Evenements

entity Event {
    *id: int
    *title: varchar
    *type: varchar 
    *date: datetime
    description: text
}

'Contacts

entity Contact {
    *id: int
    *fullName: varchar
    *type: varchar
    *role: varchar
    *address: varchar
    *phone: varchar
    *email: varchar
    website: varchar
}

'Relations

'Un utilisateur peut appartenir à une seule équipe (0,1)
'Une équipe peut regrouper un ensemble d'utilisateurs (0,n)

User "0,1" -- "0,n" Team

'Un utilisateur peut avoir plusieurs événements (0,n)
'Un événement appartient à un seul utilisateur (1,1)

User "0,n" -- "1,1" Event

'Un utilisateur peut avoir plusieurs contacts (0,n)
'Un contact appartient à un seul utilisateur (1,1)

User "0,n" -- "1,1" Contact
@enduml